RESOLVED FIXED190464
[GStreamer][MSE] Fix height calculation for streams with source aspect ratio
https://bugs.webkit.org/show_bug.cgi?id=190464
Summary [GStreamer][MSE] Fix height calculation for streams with source aspect ratio
Enrique Ocaña
Reported 2018-10-11 03:02:39 PDT
(At least) MPEG-DASH videos with Screen Aspect Ration (SAR) different than 1:1 are wrongly displayed when played with dash.js 2.9.0. The code that computes width/height on MSE is applying the SAR correction inversely. The actual result is a back and forth aspect switch between what dash.js (properly) computes as video resolution and what MSE (wrongly) computes as video resolution. For instance, in a video hacked to have SAR 2:1 (so it should have twice its normal width) the video is displayed with double-width, then half-width, then double, etc. Note that the video has double-width when the MPEG-DASH URL is played using a standalone gst-play-1.0 player.
Attachments
Patch (1.82 KB, patch)
2018-10-11 03:10 PDT, Enrique Ocaña
no flags
Enrique Ocaña
Comment 1 2018-10-11 03:10:18 PDT
WebKit Commit Bot
Comment 2 2018-10-11 04:10:21 PDT
Comment on attachment 352032 [details] Patch Clearing flags on attachment: 352032 Committed r237033: <https://trac.webkit.org/changeset/237033>
WebKit Commit Bot
Comment 3 2018-10-11 04:10:23 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-10-11 04:11:31 PDT
Philippe Normand
Comment 5 2018-10-11 04:44:59 PDT
*** Bug 183591 has been marked as a duplicate of this bug. ***
Yacine Bandou
Comment 6 2018-10-11 05:26:59 PDT
(In reply to Philippe Normand from comment #5) > *** Bug 183591 has been marked as a duplicate of this bug. *** I think that should be the opposite ;)
Note You need to log in before you can comment on or make changes to this bug.