[GStreamer][MSE] Fix height calculation for streams with source aspect ratio https://bugs.webkit.org/show_bug.cgi?id=190464

Reviewed by Xabier Rodriguez-Calvar.

This patch is authored by Nikola Veljkovic <Nikola.Veljkovic@zenterio.com>

* platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::getVideoResolutionFromCaps): Reverse the SAR adjustment to "undo" it
instead of applying it twice.


Canonical link: https://commits.webkit.org/205410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237033 268f45cc-cd09-0410-ab3c-d52691b4dbfc